; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/executor/extr_nodeProjectSet.c_ExecEndProjectSet.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/executor/extr_nodeProjectSet.c_ExecEndProjectSet.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_6__ }
%struct.TYPE_6__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ExecEndProjectSet(%struct.TYPE_5__* %0) #0 {
  %2 = alloca %struct.TYPE_5__*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %2, align 8
  %3 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %4 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %3, i32 0, i32 0
  %5 = call i32 @ExecFreeExprContext(%struct.TYPE_6__* %4)
  %6 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %7 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %6, i32 0, i32 0
  %8 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @ExecClearTuple(i32 %9)
  %11 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %12 = call i32 @outerPlanState(%struct.TYPE_5__* %11)
  %13 = call i32 @ExecEndNode(i32 %12)
  ret void
}

declare dso_local i32 @ExecFreeExprContext(%struct.TYPE_6__*) #1

declare dso_local i32 @ExecClearTuple(i32) #1

declare dso_local i32 @ExecEndNode(i32) #1

declare dso_local i32 @outerPlanState(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
